Updated Features section with rotating shapes and z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ h6 {
   background-color: #042b8a;
 }
 .bg-color2 {
-  background-color: #dee7ef;
+  background-color: #eaecee;
 }
 .text-color1 {
   color: #00d1f9;
